/*
 * $Id: ChangeLog,v 1.221 2002/05/16 20:06:26 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-05-18 01:41 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
    * Corrected typo in #define hb_itemArrayPut

  * include/hbexpra.c
  * include/hbexprb.c
  * source/compiler/expropta.c
  * source/compiler/exproptb.c
  * source/compiler/exproptc.c
    ! Fixed possible GPF when Function Call is a macro.
    + Added warning on meaningless function call for At() Left() Right() and SubStr()
      if used as a statement line.

  * source/compiler/simplex.c
  * source/compiler/harbour.slx
    * Minor formatting.

  * source/compiler/harbour.c
    * Changed hb_xgrab() hb_xrealloc() and hb_xfree() to use Heap*() under MSVC.
      /* This solves strange GPFs - details documented in top of file. */

  * source/compiler/harbour.sly
    * Minor optimization and formatting.

  * source/vm/hvm.c
    * Changed parameter to va_arg() from USHORT to int to correct compiler warning.

2002-05-16 13:05 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexprb.c
  * source/compiler/harbour.sly
  * source/pp/ppcore.c
    * .AND. shortcut more Clipper compatible.
    * IF()/IIF() parsing optimized.

  * source/rtl/errorsys.prg
    - Commented Alert() regarding error.log

2002-05-15 19:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/win32ole.prg
    - Removed 1 unneed initialization.

  * source/rtl/errorapi.c
    ! Corrected hb_errInternal() to not GPF if called before hb_langRegister() is called.
    + Added output ot error.log
    + Added MessageBox() output if under Windows.

  * include/hbinit.h
  * include/hbsetup.h
  * include/hbvm.h
  * source/compiler/genc.c
  * source/vm/hvm.c
    + Added support for version check of PCODE in compiled prg.

  * source/vm/initsymb.c
  * source/vm/runner.c