@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.221 2002/05/16 20:06:26 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.222 2002/05/18 08:55:48 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-05-18 13:40 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
+  * source/vm/hvm.c
+    * Fixed errno compilation problem under Linux
 
 2002-05-18 01:41 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/hbapi.h
